[gd_scene load_steps=14 format=3 uid="uid://co1pebg5qplyw"]

[ext_resource type="Script" path="res://main_game/components/end_popup.gd" id="1_1my4m"]
[ext_resource type="Theme" uid="uid://cqc18d25q7vg3" path="res://main_game/game_theme.tres" id="2_1y2yb"]
[ext_resource type="PackedScene" uid="uid://dona1ikgp3j8m" path="res://main_game/components/enemy_displayer.tscn" id="3_vhvci"]
[ext_resource type="Texture2D" uid="uid://3en80ybg5m0s" path="res://assets/ui/green_button04.png" id="4_dk4lq"]
[ext_resource type="Texture2D" uid="uid://djy8gymy23nfe" path="res://assets/ui/green_button05.png" id="5_elpul"]
[ext_resource type="Texture2D" uid="uid://bkbfpfb1u5kno" path="res://assets/ui/green_button02.png" id="6_3ee8b"]
[ext_resource type="Texture2D" uid="uid://dl8i1u3u5ifo0" path="res://assets/ui/red_button00.png" id="7_3f0o4"]
[ext_resource type="Texture2D" uid="uid://b43sogkp4kct2" path="res://assets/ui/blue_boxCross.png" id="8_affuk"]
[ext_resource type="Texture2D" uid="uid://xvef04th0pw1" path="res://assets/ui/green_boxCross.png" id="9_lrclu"]

[sub_resource type="Animation" id="Animation_cn47s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_p2xjg"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -50), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_yv3s2"]
resource_name = "visible"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c0b3x"]
_data = {
"RESET": SubResource("Animation_cn47s"),
"appear": SubResource("Animation_p2xjg"),
"visible": SubResource("Animation_yv3s2")
}

[node name="EndPopup" type="Node2D"]
modulate = Color(1, 1, 1, 0)
script = ExtResource("1_1my4m")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 376.0
offset_top = 112.0
offset_right = 824.0
offset_bottom = 688.0
theme = ExtResource("2_1y2yb")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.67451, 0.67451, 1, 1)
metadata/_edit_lock_ = true

[node name="Title" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_top = 48.0
offset_right = 448.0
offset_bottom = 128.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[wave][center]You Win![/center][/wave]"
metadata/_edit_lock_ = true

[node name="Answer" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_top = 112.0
offset_right = 448.0
offset_bottom = 304.0
theme_override_constants/line_separation = 16
bbcode_enabled = true
text = "[center]the answer was
[color=blue]wa sans[/color]"
metadata/_edit_lock_ = true

[node name="EnemyDisplayer" parent="Control" instance=ExtResource("3_vhvci")]
position = Vector2(224, 280)
guessed = true
metadata/_edit_lock_ = true

[node name="Replay" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 368.0
offset_right = 384.0
offset_bottom = 432.0
disabled = true
texture_normal = ExtResource("4_dk4lq")
texture_pressed = ExtResource("5_elpul")
texture_hover = ExtResource("6_3ee8b")
texture_disabled = ExtResource("7_3f0o4")
stretch_mode = 0
flip_h = true
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Control/Replay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Replay"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Return" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 464.0
offset_right = 384.0
offset_bottom = 528.0
disabled = true
texture_normal = ExtResource("4_dk4lq")
texture_pressed = ExtResource("5_elpul")
texture_hover = ExtResource("6_3ee8b")
stretch_mode = 0
flip_h = true
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Control/Return"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "return to lobby"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TextureButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 392.0
offset_top = 8.0
offset_right = 440.0
offset_bottom = 56.0
texture_normal = ExtResource("8_affuk")
texture_pressed = ExtResource("9_lrclu")
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c0b3x")
}

[connection signal="pressed" from="Control/Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="Control/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Control/TextureButton" to="." method="_on_texture_button_pressed"]
